--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,8 +1,17 @@
 <p>Here are your chunks, <%= @user.username %></p>
 
 
-
-<!-- <% @user.tweets.each do |tweet| %>
+<% @user.oldchunks.each do |oldchunk| %>
  
- <p><%= tweet.content %></p>
- <% end %> -->
+ <p><%= oldchunk.title %></p>
+ <p><%= oldchunk.text %></p><br>
+ <% end %>
+ 
+<% @user.newchunks.each do |newchunk| %>
+ 
+ <p><%= newchunk.title %></p>
+ <p><%= newchunk.text %></p>
+ <p><%= newchunk.image_link %></p>
+ <p><%= newchunk.video_link %></p>
+ <p><%= newchunk.sound_link %></p><br>
+ <% end %>
