added comment to the newchunk show view to remind me to add buttons for each scene, had a question about the params at the post /newchunks route in the newchunks controller- not sure what my params are there- working out a new route system that was caused by my needing a general landing page instead of just the title page for Juliet is the Sun

--- a/app/views/newchunks/show_newchunk.erb
+++ b/app/views/newchunks/show_newchunk.erb
@@ -12,6 +12,9 @@
  <p><%= newchunk.sound_link %></p><br>
  <% end %>
 
+
+<!--I need a create button for each scene as well on this page- might put that on the right side vertical... it will use this route:/newchunks/new-->
+
  <!--I need an edit button that goes to the edit the individual new art scene page for each person's version-->
 
  <!--I need a trash button for each scene as well-->
