changed a route in the user controller to reflect the display of users on the oldchunks/oldchunks page, deleted the unneeded page show comment, renamed a page newchunks/newchunks to make it align with the oldchunks/oldchunks convention- in that they display the same info for diff chunks, wrote code to display all users of a given project on the projects/projects_index page, checked the name slugging in projects controller

--- a/app/views/oldchunks/oldchunks.erb
+++ b/app/views/oldchunks/oldchunks.erb
@@ -10,10 +10,14 @@
 
 <% @oldchunks.each do |oldchunk| %>
  
- <h2><a href="/newchunks/oldchunk-#{oldchunk.id}"><%= oldchunk.title %></a></h2>
+ <h2><a href="/newchunks/all-#{oldchunk.id}"><%= oldchunk.title %></a></h2>
  <p><%= oldchunk.text %></p>
  <% end %>
 
+<!--this is a list of all the current users on a project w link to their show page of all their contributions to this projects-->
+<% @users.each do |user| %>
+<h2><a href="/users/#{user.slug}/show"><%= user.username %></a></h2>
+ <% end %>
 
 
 </div>
