created a migration to change the password to password digest, changed the change method so the database would not store the password there, but only as a digest using bcrypt, and before this, I added an email column to the user table, and added an if statement to the welcome message in the nav bar of the layout to cover for the first user entry

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,8 +7,10 @@
   </head>
   <body>
     <nav>
+    <% if logged_in? %>
      <a href="/logout"> Log Out </a>
      <p>Welcome, <%=current_user.username %></p>
+    <%end %>
     </nav>
     
     <div class="container">
