trying to debug get requests;changing various aspects of routes to show the projects/projects index

--- a/app/views/projects/projects_index.erb
+++ b/app/views/projects/projects_index.erb
@@ -11,7 +11,7 @@
  
 
   <% @projects.each do |project| %>
-    <p><a href="projects/#{project.pslug}/index"><%= project.title %></a></p>
+    <p><a href="projects/<%=project.pslug%>/index"><%= project.title %></a></p>
     <% end %>
 
 
