--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,6 +1,6 @@
 <h2>Login to Hypermedia Wonderland</h2>
 
-
+<div><a href="/signup">SIGN-UP</a></div>
 
 
 <form method="post" action="/login">
@@ -8,4 +8,7 @@
   
   <input type="password" name="password" placeholder="password"><br><br><br>
 </input><input type="submit" id="submit" value="submit" class= "btn btn-primary"></input>
+
+
+
 </form>
