--- a/app/views/oldchunks/create_oldchunk.erb
+++ b/app/views/oldchunks/create_oldchunk.erb
@@ -5,7 +5,13 @@
 
 <form method="post" action="/oldchunks">
   <input type="text" name="title" placeholder="title"><br>
-  <textarea type="text" name="text" placeholder="text"><br>
+  <textarea type="text" name="text" placeholder="text"></textarea><br>
  
   <input type="submit" id="submit" value="submit" class= "btn btn-primary">
+
+  
+
+  <input type="hidden" name="project_id" value="<%=@project.id%>">
 </form>
+
+<h2><a href='/<%=@project.slug%>/index'>SHOW ME THE SCENE INDEX</a></h2>
