in the create_project page I added a link to the project list, corrected the slugs to pslugs and oslugs. Corrected a link to the create scene page. I automated the project title in oldchunks.erb. I added the link to the final map, create newchunk, oldchunk index, and the delete newchunk function in newchunks.erb. To that same page, I added the oldchunk title, the edit button. On the edit newchunk page, I added the delete button, link to the oldchunk index, and the final map. On the create newchunk page, I added the project title link, the oldchunk_id as hidden input, the link to the oldchunk index, and the link to the final map. I started to sketch out hte code for the final map (score) page. I added slugging methods for the oldchunk model. I wrote the delete newchunks and patch newchunks route. Wrote the get route for editing a newchunk, the get route for the newchunk index, and the newchunk create page, the post route for creating a project . The reason why this is such a long commit message - I was without a connection to the internet for these actions

--- a/app/views/comments/edit_comment.erb
+++ b/app/views/comments/edit_comment.erb
@@ -1,3 +1,5 @@
+<!---slated for deletion, probably don't need in the first iteration of the platform-->
+
 <h2>New Artwork Edit</h2>
 <form method="post" action="/comments/<%= @comment.id %>">
   
