--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,7 +14,7 @@
     </nav>
     
     <div class="container">
-      <h1>Hypermedia Wonderland</h1>
+      <!-- <h1>Hypermedia Wonderland</h1> -->
       <%= yield %> 
       
       
