--- a/app/views/oldchunks/create_oldchunk.erb
+++ b/app/views/oldchunks/create_oldchunk.erb
@@ -14,4 +14,4 @@
   <input type="hidden" name="project_id" value="<%=@project.id%>">
 </form>
 
-<h2><a href='/<%=@project.slug%>/index'>SHOW ME THE SCENE INDEX</a></h2>
+<h2><a href='/<%=@project.pslug%>/index'>SHOW ME THE SCENE INDEX</a></h2>
