--- a/app/views/newchunks/newchunks.erb
+++ b/app/views/newchunks/newchunks.erb
@@ -13,7 +13,7 @@
  <%if newchunk.user_id == current_user.id%>
  <div><h2><a href="/newchunks/<%=newchunk.id%>/edit">edit NEWCHUNK</a></h2></div>
  <%end%>
- <form method="post" action="/newchunks/<%= @newchunk.id %>/delete">
+ <form method="post" action="/newchunks/<%= newchunk.id %>/delete">
 <input type="hidden" name="_method" id="hidden" value="DELETE"></input><input type="submit" id="submit" value="Delete" class="btn btn-primary"></input>
 </form>
 
