added the copyright name and date to the layout in html, automated the name of the contributor to show on each newchunk that belongs to them on the newchunk index page of that newchunk, made that a link to the show page of that newchunk under the text 'view comments'.

--- a/app/views/newchunks/edit_newchunk.erb
+++ b/app/views/newchunks/edit_newchunk.erb
@@ -3,7 +3,7 @@
   
   <input id="hidden" type="hidden" name="_method" value="PATCH">
   <input type="text" name="title" value="<%= @newchunk.title %>"><br>
-  <textarea type="text" name="text" value="<%= @newchunk.text %>"><br>
+  <textarea type="text" name="text" value="<%= @newchunk.text %>"></textarea><br>
   <input type="url" name="video_link" value="<%= @newchunk.video_link %>"><br>
   <input type="url" name="image_link" value="<%= @newchunk.image_link %>"><br>
   <input type="url" name="sound_link" value="<%= @newchunk.sound_link %>"><br>
