--- a/app/views/newchunks/newchunks.erb
+++ b/app/views/newchunks/newchunks.erb
@@ -7,7 +7,7 @@
  <%user = User.find_by_id(newchunk.user_id) %>
  <p><%= user.username %></p>
  <a href="/newchunks/<%=newchunk.id%>/show">view comments</a>
- 
+ <p> votes <%= @vote_counts[newchunk.id.to_s]%></p>
  <p><%= newchunk.title %></p>
  <p><%= newchunk.text %></p>
  <p><%= newchunk.image_link %></p>
