figured out how to use an image as a submit button for the plus on most pages, created a public directory with an images and css directory inside, then imported the svg from Entypo+ for the plus into the plus.svg file, and created a style.css file in the css directory for some of the global styling. Since many pages have diff background colors, I went into the erb pages to add a style tag with the background colors for each, then I figured out how to enlarge the title text, by taking the px measurements from my Moqups page as attributes for the title text. I also imported the Google font Audiowide for title text throughout.

--- a/app/views/newchunks/create_newchunk.erb
+++ b/app/views/newchunks/create_newchunk.erb
@@ -1,3 +1,11 @@
+<style> 
+body{
+background-color: #fad2e0;
+color: #ff5d55;
+font-family: 'Audiowide', cursive;
+}
+</style>
+
 <h2>Create New Artwork</h2>
 
 
