--- a/app/views/newchunks/newchunks.erb
+++ b/app/views/newchunks/newchunks.erb
@@ -1,3 +1,14 @@
+
+<style> 
+body{
+background-color: #fefce0;
+color: #ff5d55;
+font-family: 'Audiowide', cursive;
+}
+</style>
+
+
+
 <h1> All Versions of a given Scene Except the Original Source Scene</h1>
 
 
