--- a/app/views/oldchunks/oldchunks.erb
+++ b/app/views/oldchunks/oldchunks.erb
@@ -1,3 +1,11 @@
+<style> 
+body{
+background-color: #ff5d55;
+color: white;
+font-family: 'Audiowide', cursive;
+}
+</style>
+
 
 <h1><a href='/projects'>HYPERMEDIA WONDERLAND</a></h1>
 <h2><%=@project.title%></h2>
