--- a/app/views/projects/projects_index.erb
+++ b/app/views/projects/projects_index.erb
@@ -1,3 +1,11 @@
+<style> 
+body{
+background-color: #ffa834;
+color: white;
+font-family: 'Audiowide', cursive;
+}
+</style>
+
 <!--":'projects/projects_index' AND '/projects'"-->
 
 <h1>Projects Index</h1>
