--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,13 +1,33 @@
-<h2>Login to Hypermedia Wonderland</h2>
 
-<div><a href="/signup">SIGN-UP</a></div>
+
+<style> 
+body{
+background-color: #ffa834;
+color: white;
+font-family: 'Audiowide', cursive;
+
+}
+h2{
+  font-size: 120px;
+  letter-spacing: 20px;
+  left: 48px;
+  top: -20px;
+  width: 1164px;
+  height: 210px;
+}
+</style>
+
+  <h2>Hypermedia Wonderland</h2>
+
+<a href="/signup">SIGN-UP</a>
 
 
 <form method="post" action="/login">
 <input type="text" name="username" placeholder="username"><br><br><br>
   
   <input type="password" name="password" placeholder="password"><br><br><br>
-</input><input type="submit" id="submit" value="submit" class= "btn btn-primary"></input>
+</input>
+<input type="image" src="/images/plus.svg" color="white" width="482" height="288"></input>
 
 
 
