--- a/app/views/newchunks/edit_newchunk.erb
+++ b/app/views/newchunks/edit_newchunk.erb
@@ -1,3 +1,15 @@
+<style> 
+body{
+background-color: #fad2e0;
+color: #ff5d55;
+font-family: 'Audiowide', cursive;
+}
+</style>
+
+
+
+
+
 <h2>New Artwork Edit</h2>
 <form method="post" action="/newchunks/<%= @newchunk.id %>">
   
