--- a/app/views/newchunks/show_newchunk.erb
+++ b/app/views/newchunks/show_newchunk.erb
@@ -1,3 +1,12 @@
+<style> 
+body{
+background-color: #fad2e0;
+color: #ff5d55;
+font-family: 'Audiowide', cursive;
+}
+</style>
+
+
 
 <div><h2><a href="/<%=@project.pslug%>/index"><%=@project.title%></a></h2></div>
 <h1>Individual Newchunk with all of its comments</h1>
