--- a/app/views/oldchunks/create_oldchunk.erb
+++ b/app/views/oldchunks/create_oldchunk.erb
@@ -1,3 +1,12 @@
+<style> 
+body{
+background-color: #ffa834;
+color: white;
+font-family: 'Audiowide', cursive;
+}
+</style>
+
+
 <h2>Create Scene</h2>
 
 
