--- a/app/views/projects/create_project.erb
+++ b/app/views/projects/create_project.erb
@@ -1,3 +1,13 @@
+
+<style> 
+body{
+background-color: #ffa834;
+color: white;
+font-family: 'Audiowide', cursive;
+}
+</style>
+
+
 <h2>Create Project</h2>
 
 
