--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,4 +1,11 @@
-<h2>Users</h2>
+<style> 
+body{
+background-color: #ffa834;
+color: white;
+font-family: 'Audiowide', cursive;
+}
+
+</style><h2>Users</h2>
 <% unless locals.empty? %>
   <%= message %>
 <% end %>
