--- a/app/views/oldchunks/oldchunks.erb
+++ b/app/views/oldchunks/oldchunks.erb
@@ -4,17 +4,28 @@ background-color: #ff5d55;
 color: white;
 font-family: 'Audiowide', cursive;
 }
+
+#project-title{
+
+  font-size: 20;
+  letter-spacing: 19px;
+  left: 1888px;
+  top: -2134px;
+  width: 1521px;
+  height: 84px;
+}
+
 </style>
 
 
-<h1><a href='/projects'>HYPERMEDIA WONDERLAND</a></h1>
+<div id="project-title"/div><h1><a href='/projects'>HYPERMEDIA WONDERLAND</a></h1>
 <h2><%=@project.title%></h2>
 
 <!--the title of the platform should always nav the user back to the original projects list-->
 
 
 
-<h3>Index of Scene Structure</h3>
+<h3>Index</h3>
 
 <div>
 
