--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -9,17 +9,40 @@ font-family: 'Audiowide', cursive;
 }
 h2{
   font-size: 120px;
-  letter-spacing: 20px;
+  letter-spacing: 30px;
   left: 48px;
   top: -20px;
   width: 1164px;
   height: 210px;
 }
+
+#subtitle {
+  font-size:18px;
+  letter-spacing:13px;
+  left:109px;
+  top:559px;
+  width:1087px;
+  height:111px;
+}
+
+#sign-up {
+  font-size:20px;
+  letter-spacing:10px;
+  left:300px;
+  top:719px;
+  width:330px;
+  height:55px;
+
+
+}
+
+
 </style>
 
-  <h2>Hypermedia Wonderland</h2>
+  <h2>Hypermedia Wonderland</h2><br>
+  <div id="subtitle"><h3> COLLABORATIVE COMPOSITION PLATFORM</H3></div>
 
-<a href="/signup">SIGN-UP</a>
+
 
 
 <form method="post" action="/login">
@@ -27,6 +50,7 @@ h2{
   
   <input type="password" name="password" placeholder="password"><br><br><br>
 </input>
+<div id="sign-up"><a href="/signup">SIGN-UP</a></div>
 <input type="image" src="/images/plus.svg" color="white" width="482" height="288"></input>
 
 
