--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -3,7 +3,7 @@
   <head>
     <title>Hypermedia Wonderland</title>
     
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+   <!--  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
